--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 authors = ["Adam Hott"]
 
 [dependencies]
+panic-halt = "0.2.0"
 embedded-hal = "1.0.*"
 defmt = "0.3.0"
 defmt-rtt = "0.4"
