--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ panic-halt = "0.2.0"
 embedded-hal = "1.0.*"
 defmt = "0.3.0"
 defmt-rtt = "0.4"
+rtt-target = "0.6.0"
 paste = "1.0.0"
 bilge = { version = "0.2.0", default-features = false }
 bytemuck = { version = "1.16.0", features = ["derive"] }
